image spacing fix

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -813,7 +813,7 @@ ul.dropdown-options{
 
 p img {
     max-width: 100%;
-    margin: 0px 0 26px 0;
+    margin: 0px 0px 23px 0;
 }
 
 span img {
